Update the source property through updateCurrentSource method

--- a/src/components/NewsSource/news_source.html
+++ b/src/components/NewsSource/news_source.html
@@ -1,8 +1,11 @@
 <section>
   <h2>News Source</h2>
 
-  <select>
+  <select @change="updateCurrentSource">
     <option>Select</option>
-    <option v-for="source in sources">{{ source.name }}</option>
+    <option
+      v-for="source in sources"
+      :value="source.id">{{ source.name }}
+    </option>
   </select>
 </section>
