If the source property is defined, put the name and descripition in view

--- a/src/components/NewsSource/news_source.html
+++ b/src/components/NewsSource/news_source.html
@@ -8,4 +8,9 @@
       :value="source.id">{{ source.name }}
     </option>
   </select>
+
+  <section v-if="source">
+    <h3>{{ source.name }}</h3>
+    <h4>{{ source.description }}</h4>
+  </section>
 </section>
